crates/aranya-policy-compiler/tests/data/commands/duplicate_fields_already_defined_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `a` is defined multiple times
  |
3 |         a int,
  |         - previous defintion here
4 |         a string
  |         ^ re-defined here
